RESOLVED FIXED57359
Assertion failure in plug-in process with clang-built 32/64-bit WebKit2
https://bugs.webkit.org/show_bug.cgi?id=57359
Summary Assertion failure in plug-in process with clang-built 32/64-bit WebKit2
Anders Carlsson
Reported 2011-03-29 10:32:16 PDT
Assertion failure in plug-in process with clang-built 32/64-bit WebKit2
Attachments
Patch (2.84 KB, patch)
2011-03-29 10:34 PDT, Anders Carlsson
no flags
Patch (6.00 KB, patch)
2011-03-29 11:00 PDT, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2011-03-29 10:34:01 PDT
Anders Carlsson
Comment 2 2011-03-29 10:55:05 PDT
Comment on attachment 87361 [details] Patch Will upload another patch shortly.
Anders Carlsson
Comment 3 2011-03-29 11:00:13 PDT
Anders Carlsson
Comment 4 2011-03-29 11:10:58 PDT
Note You need to log in before you can comment on or make changes to this bug.